tests/resource/valid/operation/in_set_is_bool.mamba
def x := [ 1, 2, 3 ]

def in_set := 2 in x
