tests/resource/invalid/type/collection/list_builder_with_cond_not_boolean.mamba
def h := [2, 3]
[ x | x in h, x + 0 ]
